--- a/stavklass.css
+++ b/stavklass.css
@@ -1,8 +1,10 @@
 .stavklass-opacity {
 	opacity: 0.5;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	height: 100%;
 	width: 100%;
+	z-index: 1000;	
+	background: #000000;
 }
