--- a/stavklass.css
+++ b/stavklass.css
@@ -11,7 +11,11 @@
 .stavklass-container {
 	background: #FFFFFF;
 	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 	width: 700px;
-	height: 300px;
-	margin: 0 auto;
+	height: 90%;
+	margin: auto;
 }
