--- a/stavklass.css
+++ b/stavklass.css
@@ -12,11 +12,12 @@
 .stavklass-container {
 	background: #FFFFFF;
 	position: absolute;
+	overflow: auto;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	width: 700px;
+	width: 70%;
 	height: 90%;
 	margin: auto;
 	cursor: default;
