Added loading classes

--- a/stavklass.css
+++ b/stavklass.css
@@ -88,3 +88,22 @@
 .stavklass-rating {
 	margin-left: 5px;
 }
+
+.stavklass-loadingopacity {
+	background: url(opacity.png);
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.stavklass-loadingprogress {
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	background: url(loading.gif);
+}
