Images container doesn't use more space than a container

--- a/stavklass.css
+++ b/stavklass.css
@@ -55,8 +55,11 @@
 }
 
 .stavklass-imagescontainer {
-	padding-top: 10px;
-	max-height: 80%;
+	top: 111px;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	position: absolute;
 	overflow: auto;
 }
 
